<resources>
    <string name="app_name">Transporte</string>
    <string name="title_home">Inicio</string>
    <string name="title_bookings">Reservación</string>
    <string name="title_travel">Viaje</string>
    <string name="title_settigns">Ajustes</string>

    <!--General-->
    <string name="text_list_empty">No hay ítems para mostrar</string>
    <string name="error_field_empty">Campo vacío</string>
    <string name="text_date">Fecha</string>
    <string name="text_variable">%1$s</string>
    <string name="text_cancel">Cancelar</string>
    <string name="text_accept">Aceptar</string>
    <string name="text_exit">Salir</string>
    <string name="text_save">Guardar</string>
    <string name="text_edit">Editar</string>
    <string name="text_delete">Eliminar</string>
    <string name="title_confirmation_dialog">Confirmar</string>
    <string name="msg_exit_dialog">Se perderá toda la información.\n¿Desea salir?</string>
    <string name="msg_delete_dialog">¿Desea eliminar esta información?</string>
    <string name="text_update">Actualizar</string>


    <!-- Home -->
    <string name="text_seats">Asientos</string>
    <string name="text_available">Disponibles</string>
    <string name="text_reserved">Reservados</string>
    <string name="text_paids">Pagos</string>
    <string name="text_collected">Recaudado</string>
    <string name="text_remainig">Restante</string>
    <string name="text_refunds_remainig">Vueltos pendientes</string>
    <string name="text_not_define">Sin definir</string>
    <string name="text_bookings_paids">Pagadas</string>
    <string name="text_bookings_remainig">Por cobrar</string>
    <string name="text_all">Todas</string>

    <!--Init-->
    <string name="text_type_pin">Ingrese Pin</string>
    <string name="error_pin_code">Pin Incorrecto</string>
    <string name="error_init_session">Error al iniciar sesión</string>
    <string name="text_initing_session">Iniciando sesión</string>

    <!--Booking-->
    <string name="text_quantity_seats_item">%1$s asiento(s)</string>
    <string name="text_new_booking">Nueva Reservación</string>
    <string name="text_name">Nombre</string>
    <string name="text_quantity_seats">N° asientos</string>
    <string name="text_receiver_paid">Receptor del pago</string>
    <string name="text_receiver_refund">Receptor del vuelto</string>
    <string name="text_add_payment">Agregar Pago</string>
    <string name="text_add_refund">Agregar Vuelto</string>
    <string name="text_payer">Quién entregó el dinero</string>
    <string name="text_amount">Monto ($)</string>
    <string name="text_price_init">0,00</string>
    <string name="error_quantity_zero">Cantidad inválida</string>
    <string name="error_amount_zero">Monto inválido</string>
    <string name="error_receiver_null">Seleccione el cobrador</string>
    <string name="text_view_details">Ver detalles</string>
    <string name="text_receiver_by">Recibido por %1$s</string>
    <string name="text_payer_by">Pagado por %1$s</string>
    <string name="text_date_paid">Pagado el día %1$s</string>
    <string name="text_amount_paid">$ %1$s</string>
    <string name="text_resume_payments">Historial de pagos</string>
    <string name="text_no_payments">No hay pagos realizados</string>
    <string name="text_resume_refunds">Historial de vueltos</string>
    <string name="text_no_refunds">No hay vueltos realizados</string>
    <string name="text_total_amount_paid">Total pagado ($) %1$s</string>
    <string name="text_total_amount_debt">Total deuda ($) %1$s</string>
    <string name="text_total_amount_refund_pending">Vuelto pendiente ($) %1$s</string>
    <string name="text_total_amount_refund">Vuelto entregado ($) %1$s</string>
    <string name="text_1">1</string>
    <string name="text_2">2</string>
    <string name="text_3">3</string>
    <string name="text_days_assembly">Días de asamblea reservados</string>
    <string name="text_days_assembly_view">Días de asamblea reservados: %1$s</string>
    <string name="text_passengers_ids">Pasajeros (cédulas)</string>
    <string name="text_download_pdf">Descargar PDF</string>
    <string name="msg_no_passengers">Esta reserva no tiene pasajeros.</string>
    <string name="msg_pdf_saved">PDF guardado en Descargas.</string>
    <string name="msg_pdf_error">Error generando PDF.</string>
    <string name="msg_no_bookings">No hay reservas para exportar.</string>

    <!--Settings -->
    <string name="text_about">Información de la App</string>>
    <string name="version_name">Versión %1$s</string>
    <string name="title_sign_out">Cerrar sesión</string>
    <string name="message_sign_out">¿Desea cerrar la sesión actual?</string>
    <string name="title_delete_all">Borrar reservaciones</string>
    <string name="message_delete_all">¿Desea eliminar todas las reservaciones?</string>
    <string name="title_profile">Personal</string>
    <string name="text_share_app">Compartir aplicación</string>

    <!-- Notification Preferences -->
    <string name="notification_key">notification</string>
    <string name="notification_header">Notificaciones</string>
    <string name="notification_title">Notificaciones activas</string>
    <string name="notification_title_off">Notificaciones apagadas</string>
    <string name="notification_received_title">¡Pago realizado!</string>
    <string name="notification_received_message">%1$s acaba de pagar $ %2$s</string>
    <string name="error_permission_notification">Error en permisos de notificación</string>

    <!-- Assembly Preferences -->
    <string name="assembly_key">assembly</string>
    <string name="assembly_header">Configuración para Asamblea Regional</string>
    <string name="assembly_title">Transporte para Regional activa</string>
    <string name="assembly_title_off">Transporte para Regional apagada</string>

    <!-- InfoApp -->
    <string name="info_app">infoReleaseTransport</string>
    <string name="msg_update">Ya se encuentra disponible una nueva versión. Debes descargarla para seguir disfrutando de la aplicación.</string>

    <string name="text_convention_circuit">Asamblea de Circuito:</string>
    <string name="text_convention_regional">Asamblea Regional:</string>
    <string name="text_date_event">Faltan %1$s días</string>

</resources>