<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/title_profile"
        android:layout="@layout/layout_preferences_category">
        <PreferenceScreen
            app:key="signOut"
            app:title="@string/title_sign_out"
            app:icon="@drawable/ic_logout_24"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/notification_header"
        android:layout="@layout/layout_preferences_category">

        <SwitchPreferenceCompat
            app:key="@string/notification_key"
            app:title="@string/notification_title"
            app:defaultValue="true"
            app:icon="@drawable/ic_notifications_active_24"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/assembly_header"
        app:isPreferenceVisible="false">

        <SwitchPreferenceCompat
            app:key="@string/assembly_key"
            app:title="@string/assembly_title"
            app:defaultValue="false"
            app:icon="@drawable/ic_assembly_off_24"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/text_about"
        android:layout="@layout/layout_preferences_category">

        <PreferenceScreen
            app:key="share_app"
            app:title="@string/text_share_app"
            app:icon="@drawable/ic_share_circle"/>

        <PreferenceScreen
            app:key="name_version"/>

    </PreferenceCategory>

</PreferenceScreen>